categories section added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- banner image -->
     <img src="./Banner Image.png" alt="image" class="banner-image">
+    <!-- categories section -->
+    <section class="categories">
+            <p class="off">65% OFF</p>
+            <p class="HOLIDAY">OUR HOLIDAY DEALS ARE BETTER</section>p>
+           <p class="all">ALL CATEGORIES</p>
+           <img src="./New Year Photo.png" alt="" class="new-year-photo">
+    </section>
 </body>
 </html>
