--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
            <p class="all">ALL CATEGORIES</p>
            <img src="./New Year Photo.png" alt="" class="new-year-photo">
     </section>
+    <!-- third section -->
+    <section>
+        <img class="vector" src="./Vectorrr.png" alt="" >
+        <div class="absolute">
+           <p class="welcome">Welcome to midnight party</p>
+           <p class="Dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+           <button class="button">Join now</button>
+        </div>
+    </section>
 </body>
 </html>
