--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
            <button class="button">Join now</button>
         </div>
     </section>
+
+    <!-- fourth section -->
+    <section class="fourth-section">
+            <p class="place"><span class="red-text">Place: </span> <span class="black-text">New Park Hotel</span></p>
+            <p class="place"><span class="red-text">Date: </span> <span class="black-text">31 December Night 2023</span></p>
+            <p class="place"><span class="red-text">Time: </span> <span class="black-text">Evening 7.30 pm to 12.30 am</span></p>
+    </section>
 </body>
 </html>
