--- a/index.html
+++ b/index.html
@@ -29,8 +29,27 @@
     <!-- fourth section -->
     <section class="fourth-section">
             <p class="place"><span class="red-text">Place: </span> <span class="black-text">New Park Hotel</span></p>
-            <p class="place"><span class="red-text">Date: </span> <span class="black-text">31 December Night 2023</span></p>
-            <p class="place"><span class="red-text">Time: </span> <span class="black-text">Evening 7.30 pm to 12.30 am</span></p>
+            <p class="December"><span class="red-text">Date: </span> <span class="black-text">31 December Night 2023</span></p>
+            <p class=""><span class="red-text">Time: </span> <span class="black-text">Evening 7.30 pm to 12.30 am</span></p>
+            <button class="btn-2">Join Now</button>
+    </section>
+    <!-- fifth section -->
+    <section class="fifth-section">
+           <div class="fifth">
+               <div>
+                  <p class="new">NEW BEST OFFER</p>
+                  <p class="Coming">Coming Soon</p>
+                  <p class="sit">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+               </div>
+               <div class="ellips">
+                         <img src="./Ellipse 1.png" alt="">
+               </div>
+               <div>
+                <p class="number">2024</p>
+                <p class="sit">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="./Group 96.png" alt="">
+               </div>
+           </div>
     </section>
 </body>
 </html>
