--- a/index.html
+++ b/index.html
@@ -51,5 +51,42 @@
                </div>
            </div>
     </section>
+
+    <!-- sixth section -->
+    <section>
+        <div class="sixth">
+           <div class="short">
+            <p class="what">WHAT IS FUNCTIONAL</p>
+            <p><span class="Holidays">Holidays </span> <span class="Sale">Sale 50%</span></p>
+            <p class="sit">
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+            </p>
+           </div>
+
+           <div class="img-group">
+            <img class="group-photo" src="./Group 75.png" alt="">
+            <img class="grp-44" src="./Group 44.png" alt="">
+            <img class="Rectangle" src="./Rectangle 1.png" alt="">
+           </div>
+        </div>
+    </section>
+
+    <!-- seventh -->
+    <section class="seventh">
+        <p class="BEST">THE BEST GIFTS</p>
+        <p class="Awesome">Our Awesome Portfolio</p>
+        <p class="sit">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <div>
+            <img class="grp-img" src="./Rectangle 3.png" alt="">
+            <img class="grp-img" src="./Rectangle 4.png" alt="">
+            <img class="grp-img" src="./Rectangle 5.png" alt="">
+        </div>
+        <div>
+            <img class="grp-img" src="./Rectangle 6.png" alt="">
+            <img class="grp-img" src="./Rectangle 7.png" alt="">
+            <img class="grp-img" src="./Rectangle 8.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
