--- a/index.html
+++ b/index.html
@@ -88,5 +88,46 @@ molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifen
             <img class="grp-img" src="./Rectangle 8.png" alt="">
         </div>
     </section>
+
+    <!-- eight section -->
+    <section>
+        <div class="eight">
+            <img  src="./Group 61.png" alt="">
+            
+        </div>
+        <p class="Subscribe">
+            Subscribe Newsletter
+        </p>
+        <p class="amet">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <input class="input" type="text">
+        <button class="btn-3">Subscribe</button>
+    </section>
+
+    <footer class="footer">
+       <div class="ft-1">
+        <div >
+            <p class="big">44, Big Building Roosevelt Street
+                <br>   Beach Gardens Florida 33410</p>
+         </div>
+         <div class="call-1">
+            <img class="call-img" src="./Call.png" alt="">
+            <p class="call">+00 123 584 124</p>
+         </div>
+       </div>
+       <div class="ft-2">
+       
+         <div class="call-1">
+            <img class="call-img" src="./Website.png" alt="">
+            <p class="call">www.website.com</p>
+         </div>
+       </div>
+       <hr>
+       <div class="grp-2">
+        <img src="./Instagram.png" alt="">
+        <img src="./Linkedin.png" alt="">
+        <img src="./Twitter.png" alt="">
+        <img src="./Facebook.png" alt="">
+       </div>
+    </footer>
 </body>
 </html>
